# chatcoder

./: .gitignore  ARCH_v0.md  DESIGN_GUIDE.md  MANIFEST.in  README.md  REFACT_GUIDE.md  USAGE.md  pyproject.toml  run_basic.sh  run_basic_feature.sh  run_basic_flow.sh  setup.py  setup_env.sh
chatcoder/: __init__.py  cli.py  init.py  utils.py
chatcoder/core/: __init__.py  ai_manager.py  chatcoder.o.py  chatcoder.o1.py  chatcoder.py  coder.py  confirmation.py  context.py  context_manager.py  detector.py  engine.py  init.py  manager.py  models.py  orchestrator.py  prompt.py  state.py  state_manager.py  status.py  thinker.o.py  thinker.py  utils.py  workflow.py
chatcoder/utils/: console.py
chatcontext/core/: manager.py  models.py  provider.py  providers.py
chatcontext/providers/: base.py  core_files.py  project_info.py
chatflow/: __init__.py
chatflow/core/: engine.py  file_state_store.py  models.py  schema.py  state.py  workflow_engine.py
chatflow/storage/: file_lock.py  file_state_store.py  state.py
chatflow/utils/: checksum.py  conditions.py  id_generator.py  risk_assessment.py
docs/: DESIGN.md  PROCESS.md  USAGE.md  WORKFLOW.md  WORKFLOW.v2.md  chatcoder_roadmap.md  chatcontext_roadmap.md  chatflow_roadmap.md
scripts/: run_basic_workflow.sh  run_dev_workflow.sh
tests/: conftest.py  test_chatcoder.py  test_chatcontext.py  test_chatflow.py  test_cli.py  test_coder.py  test_context.py  test_detector.py  test_feature.py  test_full_cli.py  test_prompt.py  test_state.py  test_thinker.py  test_workflow.py  test_workflow_engine.py
(+41 files in other folders)
